tests/fields/04-duplicate_nd.stderr
error: field `position` already declared
 --> tests/08-duplicate.rs:6:14
  |
6 |     #[scalar(position : f32)]
  |              ^^^^^^^^
